# flam-assignment

./: .gitignore  README.md  build-and-install.bat  build-and-install.sh  check-setup.bat  check-setup.sh  commits.txt  gradlew  gradlew.bat  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flamapp/: Camera2Helper.kt  GLRenderer.kt  GLSurfaceViewWrapper.kt  MainActivity.kt  NativeLib.kt  ShaderSources.kt
app/src/main/res/layout/: activity_main.xml
gl/shaders/: fragment_effects.glsl
jni/: CMakeLists.txt  native-lib.cpp  process.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: index.ts
